2002-05-20  Matti Aarnio  <mea@zmailer.org>

	* smtpserver/smtpserver.c:
	    In some testing cases the "progname" variable is not
	    set with any sane (non-NULL) value.

	* utils/policy-builder.sh.in:
	    Output the "smtp-policy.relay*" file entries only, when
	    there is some data in the line, e.g. no comments, nor
	    blank lines..

	* smtpserver/contentpolicy.c:
	    A bit more of debug output into local log..

	* transports/smtp/smtp.c:
	    Sometimes the  SS->smtpfp  will be NULL, and at such times
	    sferror() on stream yields SEGV..  Additional code armouring..

	* utils/smtp-contentfilter.in:
	    A bit cleaner use of perl's implied default variables..

2002-05-16  Matti Aarnio  <mea@zmailer.org>

	* scheduler/transport.c:
	    The code didn't consume the scheduler-notify input socket
	    at the mux() code, although it was looked for by the
	    select() in the code.

2002-04-20  Matti Aarnio  <mea@zmailer.org>

	* transports/smtp/smtp.c:
	    In the obscureish EZMLM mode we LACKED mandatory trailing
	    ">" character at MAIL FROM envelope address.  A major goofup.. :-/
	    (Especially as I use the beast myself sometimes..)

	* transports/mailbox/mboxpath.c:
	    At the  usage()  do document also the -X[X] option.

2002-04-18  Matti Aarnio  <mea@zmailer.org>

	* transports/mailbox/mailbox.c:
	    Finally a bit of understanding about how to manage
	    persistent errno status on sfio streams.

	* transports/smtp/smtp.c, transports/smtp/smtp.h,
	  transports/smtp/smtptls.c:
	    Persistent error storage things, but as of yet the
	    detail analysis/reporting at calling layers is vague.

	* libc/mail.c, libc/sfmail.c, router/rfc822.c:
	    Add missing  #include "zmsignal.h"  lines...

2002-04-17  Matti Aarnio  <mea@zmailer.org>

	* include/ta.h, transports/libta/diagnostic.c,
	  transports/errormail/errormail.c, transports/smtp/smtp.c,
	  transports/expirer/expirer.c, transports/hold/hold.c,